# django-group-role

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
django_group_role/: __init__.py  apps.py  exceptions.py  roles.py  signals.py  test.py  utils.py
django_group_role/management/commands/: populate_roles.py
tests/: test_command.py  test_configuration.py  test_database.py  test_definitions.py  test_testing_utils.py  test_utils.py
tests/example_project/: roles.py  roles_secondary.py  settings.py
