[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.7.3"
authors = [
    {"name"= "Davide Setti"},
]
description = "Django Group-based roles"
name = "django-group-role"
requires-python = ">=3.10"
dependencies = [
    "django>=3.2,<5.2",
]
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Framework :: Django",
	"Framework :: Django :: 3.2",
	"Framework :: Django :: 4.0",
	"Framework :: Django :: 4.1",
	"Framework :: Django :: 4.2",
	"Framework :: Django :: 5.0",
	"Framework :: Django :: 5.1",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
	"Intended Audience :: Developers",
]
dynamic = ["readme"]


[project.optional-dependencies]
tests = [
    "coverage[toml]",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "django-guardian~=2.4.0",
]

[project.urls]
"Homepage" = "https://github.com/certego/django-group-role"
"Bug Tracker" = "https://github.com/certego/django-group-role/issues"


[tool.setuptools]
packages = ["django_group_role"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown; charset=UTF-8; variant=GFM"}

[tool.coverage.run]
omit = [
    "*/migrations/*",
    # do not check for templates
    "*/templates/*",
    # skip statics
    "*/static/*",
    "*/apps.py",
]

branch = true

source = [
    "django_group_role",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.example_project.settings"
django_find_project = false
pythonpath = "."

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{310}-django32
    py{310,311,312}-django{40,41,42,50,51,main}

[gh]
python =
    3.12 = py312
    3.11 = py311
    3.10 = py310

[gh-actions:env]
DJANGO =
    3.2: dj32
    4.0: dj40
    4.1: dj41
    4.2: dj42
    5.0: dj50
    5.0: dj51
    main: djmain

[testenv]
package = editable
extras = tests
whitelist_externals = py.test
commands = py.test
deps=
    django32: Django>=3.2,<3.3
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2
    django42: Django>=4.2,<4.3
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2
    djmain: https://github.com/django/django/archive/main.tar.gz
"""
