[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.7.4"
license = "Apache-2.0"
authors = [{"name"= "Davide Setti"}]
description = "Django Group-based roles"
name = "django-group-role"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2,<5.3",
]
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Framework :: Django",
	"Framework :: Django :: 4.2",
	"Framework :: Django :: 5.0",
	"Framework :: Django :: 5.1",
	"Framework :: Django :: 5.2",
    "Operating System :: OS Independent",
	"Intended Audience :: Developers",
]
dynamic = ["readme"]


[project.optional-dependencies]
tests = [
    "coverage[toml]",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "django-guardian~=2.4.0",
]

[project.urls]
"Homepage" = "https://github.com/certego/django-group-role"
"Bug Tracker" = "https://github.com/certego/django-group-role/issues"


[tool.setuptools]
packages = [
    "django_group_role",
    "django_group_role.management",
    "django_group_role.management.commands"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown; charset=UTF-8; variant=GFM"}

[tool.coverage.run]
omit = [
    "*/migrations/*",
    # do not check for templates
    "*/templates/*",
    # skip statics
    "*/static/*",
    "*/apps.py",
]

branch = true

source = [
    "django_group_role",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.example_project.settings"
django_find_project = false
pythonpath = "."

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{310,311,312}-django{42,50,51,52,main}
    py313-django{51,52,main}

[gh]
python =
    3.13 = py313
    3.12 = py312
    3.11 = py311
    3.10 = py310

[gh-actions:env]
DJANGO =
    4.2: dj42
    5.0: dj50
    5.1: dj51
    5.1: dj52
    main: djmain

[testenv]
package = editable
extras = tests
whitelist_externals = py.test
commands = py.test
deps=
    django42: Django>=4.2,<4.3
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2
    django53: Django>=5.2,<5.3
    djmain: https://github.com/django/django/archive/main.tar.gz
"""
