[metadata]
name = django-group-role
version = 0.2.1
author = Davide Setti
description = Django Group-based roles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/certego/django-group-role
project_urls =
    Bug Tracker = https://github.com/certego/django-group-role/issues
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Framework :: Django :: 3.2
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
	Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.6
setup_requires=
    pytest-runner
install_requires =
    Django>=2.2
    django-guardian~=2.4.0

tests_require =
    pytest
    pytest-django
    pytest-cov

[options.packages.find]
exclude = tests

[aliases]
test=pytest

[coverage:run]
omit =
    */migrations/*
    # do not check for templates
    */templates/*
    # skip statics
    */static/*
    */apps.py

branch = true

source =
    django_group_role

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.example_project.settings

[tox:tox]
envlist =
    py{36,37,38,39,310}-django{22,30,31,32}

[testenv]
usedevelop = true
# extras = tests
commands = python setup.py test
deps=
    django22: Django>=2.2,<2.23
    django30: Django>=3.0,<3.1
    django31: Django>=3.1,<3.2
    django32: Django>=3.2,<3.3